# XLauncher-ui

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  j.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: build.yml  ci.yml  python-compilado.yml  windows-flutter.yml  windows.yml
docs/: script.py
minecraft_launcher/: __init__.py  componentes.py  confi_env.py  minecraft.py
vews/: home.py  navegacion.py  settings.py  user.py
views/: home.py  install.py  new.py  setting.py  user.py
xlauncher/: __init__.py  minecraft.py
xlauncher/views/: home.py  main.py  navegacion.py  user.py
